# BBS-CloudServer-Application

./: CMakeLists.txt  README.md  main.cpp
resources/: resources.qrc
resources/styles/: dark_theme.qss
resources/translations/: zh-CN.ts
src/core/: config_loader.cpp  config_loader.h  logger.cpp  logger.h
src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/models/: message_model.cpp  message_model.h
src/network/: websocket.cpp  websocket_client.cpp  websocket_client.h
ui/: mainwindow.ui
